Fixed margin alignment of bot text and hover tools. Also fixed top margin for scroll

--- a/client/src/css/ChatRoom.css
+++ b/client/src/css/ChatRoom.css
@@ -276,7 +276,7 @@ button:hover {
 }
 
 .bot-text {
-    margin-left: 3%;
+    left: 19px;
     float: left;
     color: var(--white);
     background-color: #1d5c9bd3;
